极客时间云原生训练营/homework/module12/istio/1.ingressgateway-simple.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  hosts:
    - "*"
  gateways:
    - httpserver
  http:
    - route:
        - destination:
            host: service0.istio-demo.svc.cluster.local # 要写完整的域名
            port:
              number: 80
